# clipboard-manager

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: highlight.ts  index.html  main.ts  searchHistory.ts  settings.html  settings.ts  style.css  toast.ts  types.ts  unlock.html  unlock.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: clipboard.rs  db.rs  encryption.rs  main.rs  settings.rs
