[package]
name = "clipboard-manager"
version = "0.1.0"
description = "Smart clipboard manager with history and search"
authors = ["user"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
arboard = "3.4"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"
sha2 = "0.10"
hex = "0.4"
dirs = "5.0"
image = "0.25"
window-vibrancy = "0.5"
window-shadows = "0.2"
base64 = "0.22"
md5 = "0.7"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
